# trading-os

./: .env.example  .gitignore  AGENTS.md  AGENT_SYSTEM_README.md  FUND_MANAGEMENT_AI_README.md  RALPH_LOOP_PROGRESS.md  RALPH_LOOP_README.md  RALPH_LOOP_REPORT.md  RALPH_LOOP_本轮总结.md  README.md  TRADING_OS_CHARTER.md  cspell.json  pyproject.toml  交易系统ralph-loop.md
.claude/: CLAUDE.md  ROLE_DEFINITION.md  settings.json
configs/: agent_config.yaml
docs/: ACCOUNT_INTEGRATION_GUIDE.md  DATA_RELIABILITY_STANDARDS.md  FILE_NAMING_STANDARDS.md  INVESTMENT_READINESS_CHECKLIST.md  RALPH_LOOP_SUMMARY.md  context.md  index.md  structure.md
journal/: README.md
scripts/: 588000_cache.csv  README.md  analyze_without_realtime.py  backtest_multi_factor.py  canslim_parquet.py  check_account_status.py  daily_market_analysis.py  daily_routine.py  data_reliability_check.py  dca_backtest.py  dca_backtest_ui.py  dca_compare.py  dca_scan_best.py  dca_scan_etf.py  elder_backtest_star50.py  elder_batch_backtest.py  elder_daily.py  execute_trade.py  execute_trade_v2.py  fix_zero_positions.py  init_simulation_account.py  macd_backtest_star50.py  quick_analysis.py  reset_account.py  search_symbol.py  system_maintenance.py  system_status.py  test_capital_allocation.py  test_decision_log.py  test_factor_data.py  test_proxy.py  test_realtime_price.py  test_stock_screener.py  track_positions.py  visualize_account.py
tests/: run_tests.py  test_52week_stats.py  test_agent_system.py  test_akshare_source.py  test_akshare_source_fallback.py  test_asset_type_handler.py  test_backtest_smoke.py  test_cli_integration.py  test_skills.py  (+20 more)
(+269 files in other folders)
