[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-os"
version = "0.0.1"
description = "Personal Trading OS: data, research, backtest, execution, risk, journaling."
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "zcs" }]

requires-python = ">=3.10,<3.15"

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

data_lake = [
  "duckdb>=1.0",
  "pandas>=2.0",
  "pyarrow>=14.0",
]

data_yahoo = [
  "yfinance>=0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

